--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.2.4",
     "firebase": "^9.18.0",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "postcss": "^8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.7",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@types/next": "^9.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
