--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
     "firebase": "^9.18.0",
+    "firebase-admin": "^11.5.0",
     "next": "^13.2.4",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
